--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <id>rosewood-repo</id>
             <url>https://repo.rosewooddev.io/repository/public/</url>
         </repository>
+
+        <repository>
+            <id>xyris-repo</id>
+            <url>https://repo.xyrisdev.com/repository/maven-public</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -58,6 +63,12 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.20.4-R0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xyrisdev</groupId>
+            <artifactId>scheduler</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
@@ -76,7 +87,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.10</version>
+            <version>2.11.6</version>
             <scope>provided</scope>
         </dependency>
 
