Add Folia support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ name: CoinsEngine
 author: NightExpress
 desciption: Unlimited virtual currencies with Vault Economy support!
 depend: [ nightcore ]
+folia-supported: true
 softdepend:
   - Vault
   - PlaceholderAPI
