--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
     </dependencies>
 
     <build>
+        <finalName>CoinsEngine-${project.version}-Folia</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory> <!-- (your resources folder location) -->
