--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.20.4-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -102,6 +103,7 @@
             <groupId>com.github.ItzSave</groupId>
             <artifactId>DeluxeCoinflipAPI</artifactId>
             <version>1.0.4</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
